<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lendytext"
            tools:context=".ui.login.LoginActivity">

            <EditText
                android:id="@+id/username"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="256dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/custom_email_icon"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableLeft="@drawable/custom_email_icon" />

            <EditText
                android:id="@+id/email"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawableLeft="@drawable/custom_lock_icon"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />


            <!--            android:enabled="false"-->
            <EditText
                android:id="@+id/password"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawableLeft="@drawable/custom_lock_icon"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawableLeft="@drawable/custom_lock_icon"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_confirmpassword"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <Button
                android:id="@+id/registed"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/signup"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.651" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="143dp"
                android:layout_marginBottom="76dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/lendy_logo_circle_foreground" />

            <TextView
                android:id="@+id/createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:text="@string/create_an_acc"
                android:textColor="@color/white"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.36" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </TableLayout>
</ScrollView>